Update to Net 9.0 & bump to version 2.3.0-beta.1

--- a/src/libs/SoloX.CodeQuality.Playwright/SoloX.CodeQuality.Playwright.csproj
+++ b/src/libs/SoloX.CodeQuality.Playwright/SoloX.CodeQuality.Playwright.csproj
@@ -2,12 +2,12 @@
 
   <Import Project="../../SharedProperties.props" />
 
-  <Import Project="../../libs/SoloX.CodeQuality.Prod/build/SoloX.CodeQuality.Prod.props" />
+  <Import Condition=" '$(TargetFramework)' == 'net9.0'" Project="../../libs/SoloX.CodeQuality.Prod/build/SoloX.CodeQuality.Prod.props" />
 
-  <Import Project="../../libs/SoloX.CodeQuality.Prod/build/SoloX.CodeQuality.Prod.targets" />
+  <Import Condition=" '$(TargetFramework)' == 'net9.0'" Project="../../libs/SoloX.CodeQuality.Prod/build/SoloX.CodeQuality.Prod.targets" />
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -18,9 +18,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.12.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
-    <PackageReference Include="Microsoft.Playwright" Version="1.47.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.2" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.48.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.11" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
