--- a/src/SharedProperties.props
+++ b/src/SharedProperties.props
@@ -1,7 +1,7 @@
 <Project>
 
   <PropertyGroup>
-    <Version>2.2.2</Version>
+    <Version>2.3.0-beta.1</Version>
     <Authors>Xavier Solau</Authors>
     <Copyright>Copyright © 2021 Xavier Solau</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
