--- a/src/libs/SoloX.CodeQuality.Test/resources/style.cs.compiler.ca.editorconfig
+++ b/src/libs/SoloX.CodeQuality.Test/resources/style.cs.compiler.ca.editorconfig
@@ -13,6 +13,9 @@ dotnet_diagnostic.CA1032.severity = error
 # CA1506: class coupling
 dotnet_diagnostic.CA1506.severity = none
 
+# CA1515: Consider making public types internal
+dotnet_diagnostic.CA1515.severity = none
+
 # CA1507: Utiliser nameof pour exprimer les noms de symboles
 dotnet_diagnostic.CA1507.severity = error
 
