--- a/src/tests/SoloX.CodeQuality.Playwright.E2ETest/Resources/PackageNugetTestProject/PackageNugetTestProject/PackageNugetTestProject.csproj
+++ b/src/tests/SoloX.CodeQuality.Playwright.E2ETest/Resources/PackageNugetTestProject/PackageNugetTestProject/PackageNugetTestProject.csproj
@@ -30,7 +30,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="SoloX.CodeQuality.Playwright" Version="2.3.0-beta.1" />
+    <PackageReference Include="SoloX.CodeQuality.Playwright" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
