--- a/src/tests/SoloX.CodeQuality.Playwright.E2ETest/SoloX.CodeQuality.Playwright.E2ETest.csproj
+++ b/src/tests/SoloX.CodeQuality.Playwright.E2ETest/SoloX.CodeQuality.Playwright.E2ETest.csproj
@@ -49,17 +49,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="Resources\PackageNugetTestProject\PackageNugetTestProject\PlaywrightTestBuilderLocalTest.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="Resources\**\*.*" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Resources\**\*.*">
+    <Compile Update="PlaywrightTestBuilderLocalTest.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    </Compile>
   </ItemGroup>
 
 </Project>
