--- a/src/SharedProperties.props
+++ b/src/SharedProperties.props
@@ -15,6 +15,8 @@
     <CodeQualityHeaderLicenseFile>LICENSE</CodeQualityHeaderLicenseFile>
 
     <AssemblyVersion>2.3.2.0</AssemblyVersion>
+    <LangVersion>12</LangVersion>
+
   </PropertyGroup>
 
 </Project>
