--- a/src/libs/SoloX.CodeQuality.Playwright/SoloX.CodeQuality.Playwright.csproj
+++ b/src/libs/SoloX.CodeQuality.Playwright/SoloX.CodeQuality.Playwright.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="[8.0.0,9.0.0)" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="[8.0.0,)" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
