--- a/src/libs/SoloX.CodeQuality.Test.Helpers.NUnit/SoloX.CodeQuality.Test.Helpers.NUnit.csproj
+++ b/src/libs/SoloX.CodeQuality.Test.Helpers.NUnit/SoloX.CodeQuality.Test.Helpers.NUnit.csproj
@@ -8,6 +8,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <Nullable>enable</Nullable>
 
     <PackageId>SoloX.CodeQuality.Test.Helpers.NUnit</PackageId>
 
@@ -30,8 +31,8 @@
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="[8.0.0,9.0.0)" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="[8.0.0,9.0.0)" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="[8.0.0,)" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="[8.0.0,)" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
