--- a/src/libs/SoloX.CodeQuality.Test.Helpers.XUnit/SoloX.CodeQuality.Test.Helpers.XUnit.csproj
+++ b/src/libs/SoloX.CodeQuality.Test.Helpers.XUnit/SoloX.CodeQuality.Test.Helpers.XUnit.csproj
@@ -7,7 +7,8 @@
   <Import Project="../../libs/SoloX.CodeQuality.Test/build/SoloX.CodeQuality.Test.targets" />
   
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <Nullable>enable</Nullable>
 
     <PackageId>SoloX.CodeQuality.Test.Helpers.XUnit</PackageId>
 
