--- a/src/libs/SoloX.CodeQuality.Test.Helpers/SoloX.CodeQuality.Test.Helpers.csproj
+++ b/src/libs/SoloX.CodeQuality.Test.Helpers/SoloX.CodeQuality.Test.Helpers.csproj
@@ -7,7 +7,8 @@
   <Import Project="../../libs/SoloX.CodeQuality.Test/build/SoloX.CodeQuality.Test.targets" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <Nullable>enable</Nullable>
 
     <PackageId>SoloX.CodeQuality.Test.Helpers</PackageId>
 
@@ -29,8 +30,14 @@
 
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.Net.Http.Json" Version="9.0.0" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+    <PackageReference Include="Microsoft.Build" Version="17.11.4" />
+    <PackageReference Include="System.Net.Http.Json" Version="[8.0.0,)" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+    <PackageReference Include="Microsoft.Build" Version="17.13.9" />
+    <PackageReference Include="System.Net.Http.Json" Version="[9.0.0,)" />
   </ItemGroup>
 
 </Project>
