--- a/src/tests/SoloX.CodeQuality.PreReleaseTestNuget/SoloX.CodeQuality.PreReleaseTestNuget.csproj
+++ b/src/tests/SoloX.CodeQuality.PreReleaseTestNuget/SoloX.CodeQuality.PreReleaseTestNuget.csproj
@@ -3,17 +3,13 @@
   <Import Project="../../SharedProperties.props" />
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <PackAsTool>true</PackAsTool>
-    <ToolCommandName>testtool</ToolCommandName>
-
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-    <Version>1.2.3</Version>
+    <Version>1.2.3-alpha.1</Version>
 
   </PropertyGroup>
 
