--- a/src/tests/SoloX.CodeQuality.PreReleaseTestTool/SoloX.CodeQuality.PreReleaseTestTool.csproj
+++ b/src/tests/SoloX.CodeQuality.PreReleaseTestTool/SoloX.CodeQuality.PreReleaseTestTool.csproj
@@ -9,11 +9,11 @@
     <Nullable>enable</Nullable>
 
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>testtool</ToolCommandName>
+    <ToolCommandName>prerealsetesttool</ToolCommandName>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-    <Version>1.2.3</Version>
+    <Version>1.2.3-alpha.1</Version>
 
   </PropertyGroup>
 
