--- a/src/tests/SoloX.CodeQuality.Test.Helpers.UTest/SoloX.CodeQuality.Test.Helpers.UTest.csproj
+++ b/src/tests/SoloX.CodeQuality.Test.Helpers.UTest/SoloX.CodeQuality.Test.Helpers.UTest.csproj
@@ -31,6 +31,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\libs\SoloX.CodeQuality.Test.Helpers\SoloX.CodeQuality.Test.Helpers.csproj" />
+    <ProjectReference Include="..\SoloX.CodeQuality.PreReleaseTestNuget\SoloX.CodeQuality.PreReleaseTestNuget.csproj" />
+    <ProjectReference Include="..\SoloX.CodeQuality.PreReleaseTestTool\SoloX.CodeQuality.PreReleaseTestTool.csproj" />
+    <ProjectReference Include="..\SoloX.CodeQuality.TestNuget\SoloX.CodeQuality.TestNuget.csproj" />
     <ProjectReference Include="..\SoloX.CodeQuality.TestTool\SoloX.CodeQuality.TestTool.csproj" />
   </ItemGroup>
 
