Update SolutionBuilder with target framework and configuration arguments.

--- a/src/tests/SoloX.CodeQuality.PreReleaseTestTool/SoloX.CodeQuality.PreReleaseTestTool.csproj
+++ b/src/tests/SoloX.CodeQuality.PreReleaseTestTool/SoloX.CodeQuality.PreReleaseTestTool.csproj
@@ -9,7 +9,7 @@
     <Nullable>enable</Nullable>
 
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>prerealsetesttool</ToolCommandName>
+    <ToolCommandName>prereleasetesttool</ToolCommandName>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
